# calc

./: .gitattributes  .gitignore  README.md  assignment.txt  build-docker-images.sh  mXparser-opt-out.ods
Vert.x/: pom.xml
bun-pure/: .gitignore  README.md  build.sh  calc-cluster.ts  calc.ts  package.json  release.sh
c-exprtk-adapter/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  c-exprtk-adapter.cpp  c-exprtk-adapter.h  debug.sh  release.sh
c-exprtk-adapter/exprtk-calculator/: CMakeLists.txt  main.cpp
c-exprtk-adapter/test/: test.c
cpp-Crow/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  app.cpp  build-crow.sh  build-framework.sh  build.sh  exprtk.hpp  release.sh
cpp-Crow/src/: CalcHandler.cpp  CalcHandler.hpp  CalcServer.cpp  CalcServer.hpp
cpp-Crow/tests/: CMakeLists.txt  CalcHandler.cpp  CalcHandler.hpp  CalcServer.cpp  CalcTest.cpp
cpp-cpprestsdk/: AGENTS.md  CMakeLists.txt  README.md  app.cpp  release.sh
cpp-cpprestsdk/src/: CalcHandler.hpp  CalcServer.hpp
cpp-cpprestsdk/tests/: CMakeLists.txt  CalcServer.hpp  CalcTest.cpp
cpp-drogon/: CMakeLists.txt  CalcHandler.hpp  README.md  app.cpp  build-drogon.sh  exprtk-adapter.hpp
cpp-httplib/: CMakeLists.txt  README.md  app.cpp  httplib.h
cpp-oatpp/: CMakeLists.txt  README.md  app.cpp  build-oatpp.sh  build.sh
cpp-oatpp/src/: AppComponent.hpp  CalcController.hpp  Constants.hpp  Runner.cpp  Runner.hpp
cpp-oatpp/src/calc/: App.cpp  Constants.hpp  Runner.cpp  SwaggerComponent.hpp  exprtk-adapter.hpp  exprtk.hpp
cpp-oatpp/src/calc/controller/: CalcController.hpp
cpp-poco/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  app.cpp  build-framework.sh  build-poco.sh  release.sh
cpp-poco/src/: CalcConstants.hpp  CalcGetHandler.cpp  CalcGetHandler.hpp  CalcPostHandler.cpp  CalcPostHandler.hpp  CalcRequestHandlerFactory.cpp  CalcRequestHandlerFactory.hpp  CalcServer.cpp  CalcServer.hpp
cpp-poco/tests/: CMakeLists.txt  CalcConstants.hpp  CalcGetHandler.cpp  CalcGetHandler.hpp  CalcPostHandler.cpp  CalcPostHandler.hpp  CalcRequestHandlerFactory.cpp  CalcRequestHandlerFactory.hpp  CalcTest.cpp
dart-pure/: README.md  pubspec.yaml
deno-oak/: .gitignore  README.md  build.sh  calc.ts  deno.json
deno-pure/: .gitignore  README.md  calc.ts  deno.json
dlang-Vibe.d/: .gitignore  dub.json
dlang-serverino/: .gitignore  README.md  build.sh  dub.json  dub.selections.json
docker/: Dockerfile.alpine  Dockerfile.centos  Dockerfile.debian
dotnet/: App.cs  Calc.cs  Calc.sln  CalcTests.cs  README.md  calc.csproj
exprtk/: exprtk-adapter.hpp  exprtk.hpp
go-echo/: .gitignore  AGENTS.md  README.md  exprtk_test.go  go.mod  go.sum  handler.go  handler_test.go  main.go
go-exprtk-adapter/: .dockerignore  go-exprtk-adapter.cpp  go-exprtk-adapter.go  go-exprtk-adapter.h
go-fasthttp/: .dockerignore  AGENTS.md  Makefile  README.md  exprtk.go  exprtk_test.go  go-exprtk-adapter  go.mod  go.sum  handler.go  handler_test.go  main.go  main_test.go
go-gin/: .gitignore  AGENTS.md  Makefile  README.md  cover.out  exprtk.go  exprtk_test.go  go.mod  go.sum  handler.go  handler_test.go  main.go
go-pure/: .gitignore  AGENTS.md  Makefile  README.md  exprtk.go  exprtk_test.go  go.mod  handler.go  handler_test.go  main.go  main_test.go
helidon-mp/: .gitignore  Dockerfile  Dockerfile.jlink  README.md  app.yaml  pom.xml
helidon-se/: Dockerfile  Dockerfile.native  README.md  pom.xml
java-Vertx/: pom.xml
java-exprtk-adapter/: .gitignore  CMakeLists.txt  build-java-exprtk-adapter.sh  java-exprtk-adapter.c  java-exprtk-adapter.cpp  org_dummy_calc_ExprtkAdapter.h  org_dummy_calc_JavaExprtkAdapter.h  pom.xml  release.sh
java-exprtk-adapter/.cache/clangd/index/: java-exprtk-adapter.cpp.2C4019011FDD203E.idx  org_dummy_calc_ExprtkAdapter.h.BBF4FDE811C0D8EE.idx
java-exprtk-adapter/src/main/java/org/dummy/calc/: JavaExprtkAdapter.java
java-exprtk-adapter/src/test/java/org/dummy/calc/: ExprtkAdapterTest.java
java-helidon-mp/: .helidon  pom.xml
java-helidon-se/: .helidon  pom.xml
java-jetty/: README.md  pom.xml
java-ktor/: pom.xml
java-micronaut/: README.md  micronaut-cli.yml  pom.xml
java-netty/: pom.xml
java-pure/: AGENTS.md  build.sh  pom.xml
java-quarkus/: README.md
java-quarkus-reactive/: pom.xml
java-scala3-cask/: build.sh  pom.xml
java-scala3-zio-http/: build.sh  pom.xml
java-spring-boot-webflux/: pom.xml
java-tomcat/: pom.xml
java-undertow/: pom.xml
jetty/: pom.xml
julia/: Project.toml  build.sh  run.sh
ktor/: pom.xml
micronaut/: pom.xml
netty/: .gitignore  pom.xml
nodejs/: .gitignore  build.sh  package.json  server.js
nodejs-expressjs/: build.sh  eslint.config.js  package.json  tsconfig.json
nodejs-nestjs/: build.sh  eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts
nodejs-pure/: .gitignore  build.sh  package.json  server.js  server.test.ts  server.ts  tsconfig.json  vitest.config.ts
ocaml-Dream/: README.md  build.sh  calc.ml  dune
pure-java/: pom.xml
python-fastapi/: .gitignore  AGENTS.md  README.md  build-and-run.sh  build.sh  debug.sh  gunicorn.conf.py  profile.sh  pyproject.toml  requirements.txt  run.sh  snakevizw.sh
python-flask/: AGENTS.md  README.md  build-and-run.sh  gunicorn.conf.py  pyproject.toml  requirements.txt
python-pyramid/: AGENTS.md  README.md  build.sh  gunicorn.conf.py  pyproject.toml  requirements.txt
python-pyramid/src/: app.py  c_exprtk_adapter.py
python-pyramid/tests/: conf.py  test_calc.py
python-sanic/: .gitignore  AGENTS.md  pyproject.toml  requirements.txt  run.sh
python-tornado/: AGENTS.md  README.md  build.sh  gunicorn.conf.py  pyproject.toml  requirements.txt
quarkus/: README.md  pom.xml
quarkus-reactive/: README.md  pom.xml
rust-actix/: AGENTS.md  Cargo.toml  README.md  build.rs  c-exprtk-adapter.h
rust-actix/src/: api_docs.rs  calc.rs  handler.rs  lib.rs  main.rs
rust-axum/: AGENTS.md  Cargo.toml  README.md  c-exprtk-adapter.h
rust-axum/src/: api_docs.rs  calc.rs  handler.rs  lib.rs
rust-rocket/: AGENTS.md  Cargo.toml  README.md
rust-rocket/src/: calc.rs  handler.rs  lib.rs
(+233 files in other folders)
