[project]
name = "calc-pyramid"
version = "0.1.0"
requires-python = ">= 3.10"
dynamic = ["dependencies"]
readme = {file = "README.md", content-type = "text/markdown"}

[build-system]
requires = ["hatchling==1.26", "hatch-requirements-txt==0.4.1"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build.targets.wheel]
packages = ["src", "tests"]
