[package]
name = "calc-actix"
version = "0.1.0"
edition = "2024"

[dependencies]
meval = "0.2.0"
actix-web = "4"
serde = { version = "1", features = ["derive"] }
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web", "debug-embed"] }

[build-dependencies]
bindgen = "0.72.1"

[[bin]]
name = "calc"
path = "src/calc.rs"
