[package]
name = "calc-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
meval = "0.2.0"
axum = "0.8.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "debug-embed"] }

[build-dependencies]
bindgen = "0.72.1"

[[bin]]
name = "calc"
path = "src/calc.rs"
