[package]
name = "calc-rocket"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.1"
meval = "0.2.0"
serde = { version = "1", features = ["derive"] }
utoipa = { version = "5", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "9", features = ["rocket", "debug-embed"] }

[build-dependencies]
bindgen = "0.72.1"

[[bin]]
name = "calc"
path = "src/calc.rs"
